Pull up fix for CONNECTORS-1708 from trunk.
git-svn-id: https://svn.apache.org/repos/asf/manifoldcf/branches/release-2.22-branch@1900318 13f79535-47bb-0310-9956-ffa450edef68